app/styles/components/shared/c-modal.scss
@import '../../settings';

.c-modal {
  align-items: center;
  background-color: rgba($color-1, .7);
  display: flex;
  height: 100%;
  justify-content: center;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;

  > .content {
    align-items: center;
    display: flex;
    height: 100%;
    margin-left: 10px;
    max-height: calc(100% - 60px);
    position: relative;
    width: calc(100% - 60px);

    @media #{$mq-mobile-large} {
      max-width: 860px;
      min-width: 370px;
    }

    @media #{$mq-tablet} {
      min-width: 620px;
    }

    @media #{$mq-laptop} {
      width: 860px;
    }

    .contain-content {
      -webkit-overflow-scrolling: touch;
      background-color: $color-2;
      border: 1px solid rgba($color-3, .3);
      color: $color-4;
      max-height: 100%;
      overflow-x: hidden;
      overflow-y: auto;
      width: calc(100% - 10px);

      .contain-button {
        position: absolute;
        right: 10px;
      }

      .contain-padding {
        padding: 40px;
      }
    }
  }

  .close-button {
    background-color: $color-4;
    border: 0;
    border-radius: 100%;
    cursor: pointer;
    height: 40px;
    position: absolute;
    top: 10px;
    width: 40px;
    z-index: 1;

    @media screen and (min-width: 550px) {
      left: 0;
      top: 20px;
      transform: translateX(-50%);
    }

    > .icon {
      display: block;
      height: 16px;
      left: 50%;
      position: absolute;
      stroke: $color-7;
      top: 50%;
      transform: translate(-50%, -50%);
      width: 16px;
    }
  }
}

